fixed overflow X

--- a/css/beraum.css
+++ b/css/beraum.css
@@ -23,7 +23,7 @@ ul{
     padding: 0 !important;
 }
 html{
-    overflow-y: hidden;
+    overflow-x: hidden;
 }
 
 /*---------------------- HEADER -----------------------*/
